tests/integration/formats/errors/xpath-invalid-gcc.txt
=== stderr ===

1 fatal
=== stdout ===
xpath: error: Parse error
1 | //class[bad=(
                 ^

